--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "Simple data collection site with admin panel",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+"scripts": {
+  "start": "node server.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
