--- a/package.json
+++ b/package.json
@@ -3,22 +3,24 @@
   "version": "1.0.0",
   "description": "Simple data collection site with admin panel",
   "main": "server.js",
-"scripts": {
-  "start": "node server.js"
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-sqlite3": "^0.9.13",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.18.0",
-    "multer": "^2.0.1",
-    "nodemailer": "^7.0.3",
-    "sqlite3": "^5.1.7",
+    "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
+    "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
   }
-} 
+}
